--- a/config/config.yaml
+++ b/config/config.yaml
@@ -12,10 +12,11 @@ features:
   rolling_windows: [7, 30]
 
 models:
-  xgboost:
-    n_estimators: 100
-    max_depth: 6
-    learning_rate: 0.1
+  random_forest:
+    n_estimators: 50
+    max_depth: 8
+    min_samples_leaf: 5
+    n_jobs: 1
   lightgbm:
     n_estimators: 100
     num_leaves: 31
