Track scaler.joblib in DVC pipeline

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -16,6 +16,7 @@ stages:
       - config/config.yaml
     outs:
       - data/processed/processed.csv
+      - models/scaler.joblib
 
   train:
     cmd: python src/stages/model_training.py
