--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -97,4 +97,21 @@ jobs:
       if: success()
       run: |
         docker push 490004640299.dkr.ecr.eu-north-1.amazonaws.com/ecommerce_ecr:latest
+    - name: Deploy to EC2
+      if: success()
+      uses: appleboy/ssh-action@v0.1.5
+      with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws configure set default.region eu-north-1
+            aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 490004640299.dkr.ecr.eu-north-1.amazonaws.com
+            docker pull 490004640299.dkr.ecr.eu-north-1.amazonaws.com/ecommerce_ecr:latest
+            docker stop ecommerce_ecr || true
+            docker rm ecommerce_ecr || true
+            docker run -d -p 8501:8501 -p 8000:8000 --env DAGSHUB_PAT="${{ secrets.ABARK_MLOPS }}" --name ecommerce_ecr --restart always 490004640299.dkr.ecr.eu-north-1.amazonaws.com/ecommerce_ecr:latest
+
     
