--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,9 @@
 name: Demand Forecast CI
 
 on:
+  # workflow_dispatch:
   push:
-    branches: [ main, master ]
+    branches: [ main, master ]  
 
 jobs:
   build_and_test:
